add more path
